src/objects/Site_Trial__c.object
<CustomObject>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Site Trials</relationshipLabel>
        <relationshipName>Site_Trials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <label>Trial</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>Site Trials</relationshipLabel>
        <relationshipName>Site_Trials</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <picklist>
            <picklistValues>
                <fullName>Site</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Site Trial</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Trials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>